--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                         alt="Personal Project" 
                         class="project-img">
                     </div>
-                    <h2 class="skills-sub-title project-title">Amazon Web-Scraper</h2>
-                        <span id="proj-stack">Node.js | Typescript | Rest API's | MongoDB</span>
+                    <h2 class="skills-sub-title project-title">Web-Scraper</h2>
+                        <span id="proj-stack">Node.js | TS | MongoDB</span>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
