--- a/index.html
+++ b/index.html
@@ -208,6 +208,24 @@
                             <h3>Typescript</h3>
                         </div>
                         </article>
+                        <article>
+                            <img 
+                        src="./assets/tailwindcss_icon.png" 
+                        alt="Tailwindcss Icon"
+                        class="icon">
+                        <div>
+                            <h3>Tailwindcss</h3>
+                        </div>
+                        </article>
+                        <article>
+                            <img 
+                        src="./assets/nextjs_icon.png" 
+                        alt="Next.js Icon"
+                        class="icon">
+                        <div>
+                            <h3>Next.js</h3>
+                        </div>
+                        </article>
                 </div>
             </div>
         </div>
