--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         alt=" React Icon"
                         class="icon">
                         <div>
-                            <h3>Reactjs</h3>
+                            <h3>React</h3>
                         </div>
                         </article>
                         <article>
@@ -262,7 +262,7 @@
                         class="project-img">
                     </div>
                     <h2 class="skills-sub-title project-title">Web-Scraper</h2>
-                        <span id="proj-stack">Node.js | TS | MongoDB</span>
+                        <span id="proj-stack">Next.js | TS | MongoDB</span>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
