Project link update

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <h2 class="skills-sub-title project-title">Personal Portfolio</h2>
                         <span id="proj-stack">HTML | CSS | Javascript </span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/personalportfolio-html-css-js.git'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
                     <h2 class="skills-sub-title project-title">Web-Scraper</h2>
                         <span id="proj-stack">Next.js | TS | MongoDB</span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/enlightened-react-tailwindcss-next.js.git'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                 </div>
@@ -278,7 +278,7 @@
                     <h2 class="skills-sub-title project-title">Snake Game</h2>
                         <span id="proj-stack">Python</span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/Snake-Game--Python.git'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                 </div>
