--- a/index.html
+++ b/index.html
@@ -226,6 +226,15 @@
                             <h3>Next.js</h3>
                         </div>
                         </article>
+                        <article>
+                            <img 
+                        src="./assets/nodejs_icon.png" 
+                        alt="Next.js Icon"
+                        class="icon">
+                        <div>
+                            <h3>Node.js</h3>
+                        </div>
+                        </article>
                 </div>
             </div>
         </div>
