Resume and Projects

--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
                         alt="Amazon Web-Scraper" 
                         class="project-img">
                     </div>
-                    <h2 class="skills-sub-title project-title">Personal Portfolio</h2>
-                        <span id="proj-stack">HTML | CSS | Javascript </span>
+                    <h2 class="skills-sub-title project-title">Web-Scraper</h2>
+                        <span id="proj-stack">Nextjs | TS | Tailwind </span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/personalportfolio-html-css-js.git'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/enlightened-react-tailwindcss-next.js'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                 </div>
@@ -270,24 +270,24 @@
                         alt="Personal Project" 
                         class="project-img">
                     </div>
-                    <h2 class="skills-sub-title project-title">Web-Scraper</h2>
-                        <span id="proj-stack">Next.js | TS | MongoDB</span>
+                    <h2 class="skills-sub-title project-title">Figma Clone</h2>
+                        <span id="proj-stack">Javascript | HTML | CSS</span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/enlightened-react-tailwindcss-next.js.git'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/gpt4-hunter-react'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                        src="./assets/project-2.png" 
+                        src="./assets/project-3.png" 
                         alt="Snake Game" 
                         class="project-img">
                     </div>
                     <h2 class="skills-sub-title project-title">Snake Game</h2>
                         <span id="proj-stack">Python</span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/Snake-Game--Python.git'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/Snake_py'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                 </div>
