--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2" 
-                onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+                onclick="window.open('./assets/hunter_resume.pdf')">Download CV</button>
                 <button 
                 class="btn btn-color-1" 
                 onclick="location.href='./#contact'">Contact Info</button>
