Updated Project Web scraper links

--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
                     <h2 class="skills-sub-title project-title">Web-Scraper</h2>
                         <span id="proj-stack">Nextjs | TS | Tailwind </span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/enlightened-react-tailwindcss-next.js'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/pricewise'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://pricewise-one-pearl.vercel.app/'">Live Demo</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
