--- a/index.html
+++ b/index.html
@@ -252,12 +252,26 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                        src="./assets/project-1.png" 
+                        src="./assets/demo.gif" 
+                        alt="saas-translator-app" 
+                        class="project-img">
+                    </div>
+                    <h2 class="skills-sub-title project-title">Saas Translator Chat</h2>
+                        <span id="proj-stack">Nextjs | TS | Firebase</span>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/saas-translator-app'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://saas-translator-app-umber.vercel.app/'">Live Demo</button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/Pricewise.png" 
                         alt="Amazon Web-Scraper" 
                         class="project-img">
                     </div>
-                    <h2 class="skills-sub-title project-title">Web-Scraper</h2>
-                        <span id="proj-stack">Nextjs | TS | Tailwind </span>
+                    <h2 class="skills-sub-title project-title">Amazon Web-Scraper</h2>
+                        <span id="proj-stack">Nextjs | TS | MongoDB</span>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/pricewise'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://pricewise-one-pearl.vercel.app/'">Live Demo</button>
@@ -266,28 +280,14 @@
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                        src="./assets/project-1.png" 
-                        alt="Personal Project" 
-                        class="project-img">
-                    </div>
-                    <h2 class="skills-sub-title project-title">Figma Clone</h2>
-                        <span id="proj-stack">Javascript | HTML | CSS</span>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/gpt4-hunter-react'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
-                    </div>
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img 
                         src="./assets/project-3.png" 
-                        alt="Snake Game" 
+                        alt="Spotify Clone" 
                         class="project-img">
                     </div>
-                    <h2 class="skills-sub-title project-title">Snake Game</h2>
-                        <span id="proj-stack">Python</span>
+                    <h2 class="skills-sub-title project-title">Spotify Clone App</h2>
+                        <span id="proj-stack">Nextjs | TS | Supabase</span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/Snake_py'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/spotify-clone-project'">Github</button>
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
                     </div>
                 </div>
