--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         alt="Experience Icon"
                         class="icon">
                         <h3>Experience</h3>
-                        <p>4+ months<br/>FullStack Development</p>
+                        <p>6+ months<br/>FullStack Development</p>
                     </div>
                     <div class="details-container">
                         <img 
@@ -228,11 +228,38 @@
                         </article>
                         <article>
                             <img 
-                        src="./assets/nodejs_icon.png" 
+                        src="./assets/Java.png" 
                         alt="Next.js Icon"
                         class="icon">
                         <div>
-                            <h3>Node.js</h3>
+                            <h3>Java</h3>
+                        </div>
+                        </article>
+                        <article>
+                            <img 
+                        src="./assets/Mongodb.png" 
+                        alt="Next.js Icon"
+                        class="icon">
+                        <div>
+                            <h3>MongoDB</h3>
+                        </div>
+                        </article>
+                        <article>
+                            <img 
+                        src="./assets/firebase.png" 
+                        alt="Next.js Icon"
+                        class="icon">
+                        <div>
+                            <h3>Firebase</h3>
+                        </div>
+                        </article>
+                        <article>
+                            <img 
+                        src="./assets/stripe.png" 
+                        alt="Next.js Icon"
+                        class="icon">
+                        <div>
+                            <h3>Stripe</h3>
                         </div>
                         </article>
                 </div>
