updated Projects page

--- a/index.html
+++ b/index.html
@@ -286,36 +286,36 @@
                     <h2 class="skills-sub-title project-title">Saas Translator Chat</h2>
                         <span id="proj-stack">Nextjs | TS | Firebase</span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/saas-translator-app'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://saas-translator-app-umber.vercel.app/'">Live Demo</button>
+                        <button class="btn btn-color-2 project-btn"  target="_blank" onclick="location.href='https://github.com/harbeeny/saas-translator-app'">Github</button>
+                        <button class="btn btn-color-2 project-btn" target="_blank" onclick="location.href='https://saas-translator-app-umber.vercel.app/'">Live Demo</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                        src="./assets/Pricewise.png" 
+                        src="./assets/pricewise.png" 
                         alt="Amazon Web-Scraper" 
                         class="project-img">
                     </div>
                     <h2 class="skills-sub-title project-title">Amazon Web-Scraper</h2>
                         <span id="proj-stack">Nextjs | TS | MongoDB</span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/pricewise'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://pricewise-one-pearl.vercel.app/'">Live Demo</button>
+                        <button class="btn btn-color-2 project-btn" target="_blank" onclick="location.href='https://github.com/harbeeny/pricewise'">Github</button>
+                        <button class="btn btn-color-2 project-btn" target="_blank" onclick="location.href='https://pricewise-one-pearl.vercel.app/'">Live Demo</button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
-                        src="./assets/project-3.png" 
+                        src="./assets/Casino-Floor-1600-x-800.png" 
                         alt="Spotify Clone" 
                         class="project-img">
                     </div>
-                    <h2 class="skills-sub-title project-title">Spotify Clone App</h2>
-                        <span id="proj-stack">Nextjs | TS | Supabase</span>
+                    <h2 class="skills-sub-title project-title">Casino App</h2>
+                        <span id="proj-stack">Java</span>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/harbeeny/spotify-clone-project'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">Live Demo</button>
+                        <button class="btn btn-color-2 project-btn" target="_blank" onclick="location.href='https://github.com/harbeeny/Casino-java'">Github</button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'" target="_blank">Live Demo</button>
                     </div>
                 </div>
             </div>
